<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:paddingBottom="60dp"
    tools:context=".ui.dialog.InfoBottomDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/greenDark" />

    <TextView
        style="@style/HeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/other_income" />

    <TextView
        style="@style/SubHeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/other_income_info" />

    <TextView
        style="@style/HeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/example" />

    <TextView
        style="@style/SubHeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/example_other_income" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/greenDark" />

    <TextView
        style="@style/HeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/non_income" />

    <TextView
        style="@style/SubHeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/non_income_info" />

    <TextView
        style="@style/HeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/example" />

    <TextView
        style="@style/SubHeadlineTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/example_non_income" />

</LinearLayout>